<resources>
    <string name="app_name">IRuber</string>
    <string name="cadastro_cliente">Cadastro Cliente</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cadastro_restaurante">Cadastro Restaurante</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="numero">Número</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="cpnj">CPNJ</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="passHint">(digite sua senha aqui)</string>
    <string name="userHint">(digite seu usuário aqui)</string>
    <string name="txtDadosRestaurante">Dados do Restaurante</string>
    <string name="cnpj">cnpj</string>
    <string name="cadastroLayout">Clique aqui para se cadastrar!</string>
    <string name="logo">logo</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="selecione_como_deseja_logar">Selecione como deseja logar</string>
    <string name="Selecione_como_deseja_se_cadastrar">Selecione como deseja se cadastrar</string>
    <string name="content_description_logo">Logo do aplicativo</string>
    <string name="cep">CEP</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="cadastro">Cadastro</string>
    <string name="celular">Celular</string>
    <string name="textCadastro">Ainda não possui cadastro?</string>

    <string-array name="state_array">
        <item>Estado</item>
        <item>Pernambuco</item>
    </string-array>

    <string-array name="pernambuco_city_array">
        <item>Cidade</item>
        <item>Abreu e Lima</item>
        <item>Afogados da Ingazeira</item>
        <item>Afranio</item>
        <item>Agrestina</item>
        <item>Agua Preta</item>
        <item>Aguas Belas</item>
        <item>Alagoinha</item>
        <item>Alianca</item>
        <item>Altinho</item>
        <item>Amaraji</item>
        <item>Angelim</item>
        <item>Aracoiaba</item>
        <item>Araripina</item>
        <item>Arcoverde</item>
        <item>Barra de Guabiraba</item>
        <item>Barreiros</item>
        <item>Belem de Maria</item>
        <item>Belem de Sao Francisco</item>
        <item>Belo Jardim</item>
        <item>Betania</item>
        <item>Bezerros</item>
        <item>Bodoco</item>
        <item>Bom Conselho</item>
        <item>Bom Jardim</item>
        <item>Bonito</item>
        <item>Brejao</item>
        <item>Brejinho</item>
        <item>Brejo da Madre de Deus</item>
        <item>Buenos Aires</item>
        <item>Buique</item>
        <item>Cabo de Santo Agostinho</item>
        <item>Cabrobo</item>
        <item>Cachoeirinha</item>
        <item>Caetes</item>
        <item>Calcado</item>
        <item>Calumbi</item>
        <item>Camaragibe</item>
        <item>Camocim de Sao Felix</item>
        <item>Camutanga</item>
        <item>Canhotinho</item>
        <item>Capoeiras</item>
        <item>Carnaiba</item>
        <item>Carnaubeira da Penha</item>
        <item>Carpina</item>
        <item>Caruaru</item>
        <item>Casinhas</item>
        <item>Catende</item>
        <item>Cedro</item>
        <item>Cha Grande</item>
        <item>Cha de Alegria</item>
        <item>Condado</item>
        <item>Correntes</item>
        <item>Cortes</item>
        <item>Cumaru</item>
        <item>Cupira</item>
        <item>Custodia</item>
        <item>Dormentes</item>
        <item>Escada</item>
        <item>Exu</item>
        <item>Feira Nova</item>
        <item>Ferreiros</item>
        <item>Flores</item>
        <item>Floresta</item>
        <item>Frei Miguelinho</item>
        <item>Gameleira</item>
        <item>Garanhuns</item>
        <item>Gloria do Goita</item>
        <item>Goiana</item>
        <item>Granito</item>
        <item>Gravata</item>
        <item>Iati</item>
        <item>Ibimirim</item>
        <item>Ibirajuba</item>
        <item>Igarassu</item>
        <item>Iguaraci</item>
        <item>Inaja</item>
        <item>Ingazeira</item>
        <item>Ipojuca</item>
        <item>Ipubi</item>
        <item>Itacuruba</item>
        <item>Itaiba</item>
        <item>Itamaraca</item>
        <item>Itambe</item>
        <item>Itapetim</item>
        <item>Itapissuma</item>
        <item>Itaquitinga</item>
        <item>Jaboatao dos Guararapes</item>
        <item>Jaqueira</item>
        <item>Jatauba</item>
        <item>Jatoba</item>
        <item>Joao Alfredo</item>
        <item>Joaquim Nabuco</item>
        <item>Jucati</item>
        <item>Jupi</item>
        <item>Jurema</item>
        <item>Lagoa Grande</item>
        <item>Lagoa do Carro</item>
        <item>Lagoa do Itaenga</item>
        <item>Lagoa do Ouro</item>
        <item>Lagoa dos Gatos</item>
        <item>Lajedo</item>
        <item>Limoeiro</item>
        <item>Macaparana</item>
        <item>Machados</item>
        <item>Manari</item>
        <item>Maraial</item>
        <item>Mirandiba</item>
        <item>Moreilandia</item>
        <item>Moreno</item>
        <item>Nazare da Mata</item>
        <item>Olinda</item>
        <item>Orobo</item>
        <item>Oroco</item>
        <item>Ouricuri</item>
        <item>Palmares</item>
        <item>Palmeirina</item>
        <item>Panelas</item>
        <item>Paranatama</item>
        <item>Parnamirim</item>
        <item>Passira</item>
        <item>Paudalho</item>
        <item>Paulista</item>
        <item>Pedra</item>
        <item>Pesqueira</item>
        <item>Petrolandia</item>
        <item>Petrolina</item>
        <item>Pocao</item>
        <item>Pombos</item>
        <item>Primavera</item>
        <item>Quipapa</item>
        <item>Quixaba</item>
        <item>Recife</item>
        <item>Riacho das Almas</item>
        <item>Ribeirao</item>
        <item>Rio Formoso</item>
        <item>Saire</item>
        <item>Salgadinho</item>
        <item>Salgueiro</item>
        <item>Saloa</item>
        <item>Sanharo</item>
        <item>Santa Cruz da Baixa Verde</item>
        <item>Santa Cruz do Capibaribe</item>
        <item>Santa Cruz</item>
        <item>Santa Filomena</item>
        <item>Santa Maria da Boa Vista</item>
        <item>Santa Maria do Cambuca</item>
        <item>Santa Terezinha</item>
        <item>Sao Benedito do Sul</item>
        <item>Sao Bento do Una</item>
        <item>Sao Caitano</item>
        <item>Sao Joao</item>
        <item>Sao Joaquim do Monte</item>
        <item>Sao Jose da Coroa Grande</item>
        <item>Sao Jose do Belmonte</item>
        <item>Sao Jose do Egito</item>
        <item>Sao Lourenco da Mata</item>
        <item>Sao Vicente Ferrer</item>
        <item>Serra Talhada</item>
        <item>Serrita</item>
        <item>Sertania</item>
        <item>Sirinhaem</item>
        <item>Solidao</item>
        <item>Surubim</item>
        <item>Tabira</item>
        <item>Tacaimbo</item>
        <item>Tacaratu</item>
        <item>Tamandare</item>
        <item>Taquaritinga do Norte</item>
        <item>Terezinha</item>
        <item>Terra Nova</item>
        <item>Timbauba</item>
        <item>Toritama</item>
        <item>Tracunhaem</item>
        <item>Trindade</item>
        <item>Triunfo</item>
        <item>Tupanatinga</item>
        <item>Tuparetama</item>
        <item>Venturosa</item>
        <item>Verdejante</item>
        <item>Vertente do Lerio</item>
        <item>Vertentes</item>
        <item>Vicencia</item>
        <item>Vitoria de Santo Antao</item>
        <item>Xexeu</item>
    </string-array>
    <string name="title_activity_cliente_menu">ClienteMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="perfil">Perfil</string>
    <string name="pagina_inicial">Pagina Inicial</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="title_activity_restaurante_menu">RestauranteMenuActivity</string>
    <string name="title_activity_entregador_menu">EntregadorMenuActivity</string>
    <string name="pedidos">Pedidos</string>
    <string name="pratos">Pratos</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="sair">Sair</string>
    <string name="entregadores">Entregadores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagem_do_prato">imagem do prato</string>
    <string name="nome_do_prato">Nome do prato</string>
    <string name="descri_o">Descrição</string>
    <string name="valor">Valor</string>
    <string name="criar_prato">Criar Prato</string>
    <string name="buscar">Buscar</string>
    <string name="novo_ingrediente">Novo Ingrediente</string>
    <string name="novo_prato">Novo Prato</string>
    <string name="nome_completo">Nome completo</string>
    <string name="n_mero_de_telefone">Número de telefone</string>
    <string name="imagem_perfil">imagem_perfil</string>
    <string name="senhaview">********</string>
    <string name="enderecoTeste">Rua Quarenta e Seis, 37 - Maranguape 1, Paulista - Pernambuco</string>
    <string name="emailTeste">keyson.rapha@gmail.com</string>
    <string name="numeroTeste">81988888888</string>
    <string name="documentoTeste">10838811400</string>
    <string name="nomeTeste">Keyson Raphael</string>
    <string name="name">Name</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAB_lfUacW3faClYhLuCns2wMIL7vX1ftA</string>
    <string name="esqueceu_cep">Não sei meu CEP</string>
    <string name="novo_entregador">cadastrar entregador</string>
    <string name="avaliacao">Avaliação</string>
    <string name="submit">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="txtAvaliacao">De 0 à 5, classifique o Restaurante:</string>
    <string name="adoreiRt">\"Eu Adorei!\"</string>
    <string name="nome_entregador">Nome</string>
    <string name="user_name_entregador">username</string>
    <string name="cadastro_entregador">Cadastro Entregador</string>
    <string name="cadastrar_entregador">Cadastrar Entregador</string>
    <string name="senha_confirmar">Confirme a senha</string>
    <string name="voltar">Voltar</string>
</resources>
