<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.gui.LoginUsuarioActivity"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:layout_gravity="center"
            android:textSize="@dimen/txtH1"
            android:textColor="@color/colorWhite"/>

        <EditText

            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/userHint"
            android:layout_gravity="center"
             />

        <TextView
            android:id="@string/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/senha"
            android:textSize="@dimen/txtH1"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/textSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:hint="@string/passHint"
            android:textColorHint="@color/colorWhite"
             />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="411dp"
            android:layout_height="63dp"
            android:text="Cadastro Cliente" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>